[package]
name = "dnd_tool"
default-run = "dnd_tool_bin"
version = "0.1.0"
authors = ["jack crump-leys <jackcrumpleys@gmail.com>"]
edition = "2021"
rust-version = "1.60"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dnd_tool_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18.0"
#eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[dependencies.egui-inspect]
path = "egui-inspect-main"

[profile.release]
opt-level = 2 # fast and small wasm


[dependencies.eframe]
git = "https://github.com/emilk/egui.git"
features = ["persistence"]

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
#eframe = { git = "https://github.com/emilk/egui", branch = "master" }
egui-inspect = { git = "https://github.com/crumblingstatue/egui-inspect", branch = "main" }
egui-inspect-derive = { git = "https://github.com/crumblingstatue/egui-inspect", branch = "main" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
