[package]
name = "dnd_tool"
default-run = "dnd_tool_bin"
version = "0.1.0"
authors = ["jack crump-leys <jackcrumpleys@gmail.com>"]
edition = "2021"
rust-version = "1.60"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dnd_tool_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18.0"
#eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
rand = "0.8.5"
tokio = { version = "1.20.1", features = ["full"]}
#serenity = { version = "0.11.5" , features = ["framework", "standard_framework", "rustls_backend", "collector"] }
#powershell_script = "1.0.4"
#winreg = "0.10.1"
#hostname = "0.3.1"
#auto-launch = "0.4.0"
#screenshots = "0.4.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm


[dependencies.eframe]
git = "https://github.com/emilk/egui.git"
features = ["persistence"]

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
#eframe = { git = "https://github.com/emilk/egui", branch = "master" }
#egui-inspect = { git = "https://github.com/crumblingstatue/egui-inspect", branch = "main" }
#egui-inspect-derive = { git = "https://github.com/crumblingstatue/egui-inspect", branch = "main" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
